--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_variables.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_variables.scss
@@ -48,6 +48,7 @@ $font-03: 'Selima', $sans-serif-fb;
 $icon-check: \f00c;
 $icon-check-circle: \f058;
 $icon-chevron-right: \f054;
+$icon-clone: \f24d;
 $icon-cogs: \f085;
 $icon-envelope: \f0e0;
 $icon-exclamation: \f12a;
