--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_form-fields.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_form-fields.scss
@@ -37,15 +37,17 @@ select {
 	}
 }
 
-label {
-	display: block;
-	margin: 0 0 5px 0;
-}
-
 input[type='checkbox'], input[type='radio']  {
 	position: relative;
 	top: 2px;
-	margin: 0 5px 0 0;
+}
+
+label {
+	display: block;
+	margin: 0 0 5px 0;
+	input[type='checkbox'], input[type='radio'] {
+		margin-right: 5px;
+	}
 }
 
 button[disabled], html input[disabled], option[disabled] {
