--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_viewtopic.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_viewtopic.scss
@@ -222,6 +222,13 @@ fieldset.polls dl dt {
 .topic_poll .panel {
 	min-height: 0 !important;
 	.content {
+		.author {
+			margin: 0;
+			.poll_max_votes {
+				display: block;
+				margin: 0 0 20px 0;
+			}
+		}
 		fieldset.polls dl {
 			position: relative;
 			&.voted {
@@ -234,9 +241,6 @@ fieldset.polls dl dt {
 				position: absolute;
 				top: 1px;
 				left: 20%;
-				input[type='checkbox'], input[type='radio'] {
-					margin: 0;
-				}
 				& + .resultbar {
 					padding-left: 40px;
 				}
