Adjust submit-buttons element and responsive button styles

--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_cp.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_cp.scss
@@ -474,6 +474,8 @@ fieldset.display-actions .button2 + div, fieldset.display-actions .button1 + div
 			margin: 0 0 20px 0;
 			@include clearfix('&');
 			.left-box, .right-box {
+				display: inline-block;
+				margin: 9.5px 0;
 				.icon {
 					width: auto;
 				}
