--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_form-fields.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_form-fields.scss
@@ -16,7 +16,7 @@ fieldset {
 	border: 0;
 }
 
-.inputbox, select, .button, .button1, .button2, .cp-main #viewfolder .display-options .left-box, .cp-main #viewfolder .display-options .right-box {
+.inputbox, select, .button, .button1, .button2 {
 	border: 0;
 	border-radius: 3px;
 	line-height: rem(20px);
@@ -79,7 +79,7 @@ input[type='search']::-webkit-search-cancel-button {
 		width: 40px;
 		position: absolute;
 		top: 0;
-		z-index: 2;
+		z-index: 1;
 		padding: 10px 0;
 		background: $color-01;
 		.icon {
@@ -101,7 +101,7 @@ input[type='search']::-webkit-search-cancel-button {
 /* Buttons
 ========================================================================== */
 
-.button, .button1, .button2, .cp-main #viewfolder .display-options .left-box, .cp-main #viewfolder .display-options .right-box {
+.button, .button1, .button2 {
 	display: inline-block;
 	background: $color-10;
 	color: $color-01;
@@ -122,7 +122,10 @@ input[type='search']::-webkit-search-cancel-button {
 
 fieldset.submit-buttons {
 	text-align: center;
-	margin: 0 0 20px 0;
+	margin: -10px 0 20px 0;
+	.button1, .button2, .button3 {
+		margin-top: 10px;
+	}
 }
 
 /* Fieldset - DL
