--- a/khyeras/styles/khyeras_v1/template/navbar_header.html
+++ b/khyeras/styles/khyeras_v1/template/navbar_header.html
@@ -1,4 +1,13 @@
 <nav class="navbar" role="navigation">
+	<div class="site-logo-text">
+		<a href="<!-- IF U_SITE_HOME -->{U_SITE_HOME}<!-- ELSE -->{U_INDEX}<!-- ENDIF -->" title="<!-- IF U_SITE_HOME -->{L_SITE_HOME}<!-- ELSE -->{L_INDEX}<!-- ENDIF -->">{SITENAME}</a>
+	</div>
+	<div class="mobile-menu-button">
+		<span class="mobile-menu-icon">
+			<span class="lines"><span class="line"></span></span>
+		</span>
+		<span class="mobile-menu-text">Menu</span>
+	</div>
 	<ul>
 		<li class="dropdown-container">
 			<a href="http://google.com"><span>About</span></a>
